fix to show on mobile

--- a/31/index.css
+++ b/31/index.css
@@ -5,7 +5,7 @@
 main {
   margin: 0;
   padding: 0;
-  font-size: 10px;
+  font-size: 0.7rem;
   font-family: Courier, monospace;
   line-height: 0.6;
 }
@@ -33,14 +33,14 @@ main {
   color: #666;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 800px) {
   body {
     padding: 0;
   }
 
   main {
-    font-size: 0.2em;
-    line-height: 1.1em;
+    font-size: 0.42rem;
+    line-height: 0.26rem;
   }
 
   canvas {
